--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .bold-text {
     text-align: left;
-    column-count: 1; /* Set to 1 or remove entirely if not needed */
+   
     font-family: sans-serif;
-    line-height: 5px; /* Consider increasing this for better readability */
-    font-size: 40px; /* Added 'px' unit to the font-size */
+    line-height: 5px; 
+    font-size: 40px;
 }
 
 
